[gd_scene load_steps=7 format=2]

[ext_resource path="res://assert/image/gun/Icon29_01.png" type="Texture" id=1]
[ext_resource path="res://script/weapon.gd" type="Script" id=2]
[ext_resource path="res://script/weapon.gdshader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/line_color = Color( 1, 0, 0.0705882, 1 )
shader_param/line_thickness = 0.4

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 384.0

[node name="weapon" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 3 )
rotation = 0.785398
frames = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 16, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
